[project]
name = "recove-trends"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.12.5",
    "dagster",
    "dagster-webserver",
    "requests",
    "google-cloud-bigquery",
    "google-auth",
    "slack_sdk",
    "python-decouple>=3.8",
    "dagster-cloud>=1.12.1",
]

[tool.dagster]
module_name = "scripts.pipeline"
